# xtralite

./: .gitignore  LICENSE  README.md  TODO.md  env-blend.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg
lib/xtralite/: __init__.py  __main__.py  _build.py  builder.py  chunker.py  coarsen.py  download.py  patches.py
lib/xtralite/acquire/: __init__.py  acos.py  default.py  euroghg.py  iasi.py  mopitt.py  nies.py  tropess.py  tropomi.py
lib/xtralite/retrievals/: __init__.py  acos.py  default.py  euroghg.py  iasi.py  mopitt.py  nies.py  tropess.py  tropomi.py
lib/xtralite/retrievals/_translate/: euroghg.py  iasi.py  tropess.py  tropomi.py
lib/xtralite/retrievals/translate/: acos.py  euroghg.py  mopitt.py  tropess.py  tropomi.py
lib/xtralite/retrievals/translators/: acos.py  euroghg.py  iasi.py  mopitt.py  tropess.py  tropomi.py
lib/xtralite/translate/: euroghg.py  iasi.py  mopitt.py  nies.py  tropess.py  tropomi.py
lib/xtralite/translators/: acos.py  euroghg.py  mopitt.py  tropess.py  tropomi.py
src/xtralite/: __main__.py  patches.py
src/xtralite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xtralite/acquire/: iasi.py  nies.py  tropomi.py  tropomi_blend.py  tropomi_download.py
src/xtralite/translate/: acos.py  iasi.py
tests/: plot_tracks.py
