[metadata]
name = xtralite
version = 0.0.1
author = Brad Weir
author_email = briardew@gmail.com
description = Package for downloading and processing satellite constituent data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/briardew/xtralite
project_urls =
    Bug Tracker = https://github.com/briardew/xtralite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = lib
packages = find_namespace:
python_requires = >=3.6
install_requires =
    numpy >= 1.18
    pandas >= 1.1
    packaging >= 20.0

[options.packages.find]
where = lib

[options.entry_points]
console_scripts =
    xtralite = xtralite.__main__
